--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "5.30.5",
+    "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "3.0.0-beta.1",
     "@vue/test-utils": "2.0.2",
     "cross-env": "7.0.3",
@@ -45,7 +46,7 @@
     "nano-staged": "0.8.0",
     "playwright": "1.23.2",
     "simple-git-hooks": "2.8.0",
-    "typescript": "4.7.4",
+    "typescript": "^4.7.4",
     "unplugin-auto-expose": "0.0.1",
     "vite": "3.0.0-beta.9",
     "vitest": "0.18.0",
