--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "typescript": "^4.7.4",
     "unplugin-auto-expose": "0.0.1",
     "vite": "3.0.0-beta.9",
+    "vite-plugin-windicss": "^1.8.6",
     "vitest": "0.18.0",
-    "vue-tsc": "0.38.4"
+    "vue-tsc": "0.38.4",
+    "windicss": "^3.5.6"
   },
   "dependencies": {
     "electron-updater": "5.0.5",
