--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "3.0.0-beta.1",
     "@vue/test-utils": "2.0.2",
+    "@vueuse/core": "^8.9.2",
     "cross-env": "7.0.3",
     "electron": "19.0.8",
     "electron-builder": "23.1.0",
