--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-vue": "9.2.0",
     "happy-dom": "6.0.2",
     "nano-staged": "0.8.0",
+    "pinia": "^2.0.16",
     "playwright": "1.23.2",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
