--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vue/test-utils": "2.0.2",
     "@vueuse/core": "^8.9.2",
     "cross-env": "7.0.3",
+    "dexie": "^3.2.2",
     "electron": "19.0.8",
     "electron-builder": "23.1.0",
     "electron-devtools-installer": "3.2.0",
