--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "simple-git-hooks": "2.8.0",
     "typescript": "^4.7.4",
     "unplugin-auto-expose": "0.0.1",
+    "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
     "vite": "3.0.0-beta.9",
     "vite-plugin-windicss": "^1.8.6",
