--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "vite": "3.0.0-beta.9",
     "vite-plugin-windicss": "^1.8.6",
     "vitest": "0.18.0",
+    "vue-router": "4",
     "vue-tsc": "0.38.4",
     "windicss": "^3.5.6"
   },
