--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 npx --no-install electron ./scripts/update-electron-vendors.js "
   },
   "devDependencies": {
+    "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "3.0.0-beta.1",
