--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.5",
     "@typescript-eslint/parser": "^5.30.6",
     "@vitejs/plugin-vue": "3.0.0-beta.1",
@@ -56,6 +57,7 @@
     "unplugin-auto-expose": "0.0.1",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.1",
+    "uuid": "^8.3.2",
     "vite": "3.0.0-beta.9",
     "vite-plugin-windicss": "^1.8.6",
     "vitest": "0.18.0",
