--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 npx --no-install electron ./scripts/update-electron-vendors.js "
   },
   "devDependencies": {
+    "@material-design-icons/svg": "^0.11.5",
     "@types/node": "^18.0.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.5",
@@ -60,6 +61,7 @@
     "uuid": "^8.3.2",
     "vite": "3.0.0-beta.9",
     "vite-plugin-windicss": "^1.8.6",
+    "vite-svg-loader": "^3.4.0",
     "vitest": "0.18.0",
     "vue-router": "4",
     "vue-tsc": "0.38.4",
