--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 npx --no-install electron ./scripts/update-electron-vendors.js "
   },
   "devDependencies": {
+    "@fontsource/noto-sans-sc": "^4.5.10",
+    "@fontsource/noto-serif-sc": "^4.5.10",
     "@material-design-icons/svg": "^0.11.5",
     "@types/node": "^18.0.3",
     "@types/uuid": "^8.3.4",
