--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fontsource/noto-sans-sc": "^4.5.10",
     "@fontsource/noto-serif-sc": "^4.5.10",
     "@material-design-icons/svg": "^0.11.5",
+    "@squoosh/lib": "^0.4.0",
     "@types/node": "^18.0.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.5",
