--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "8.19.0",
     "eslint-plugin-vue": "9.2.0",
     "happy-dom": "6.0.2",
+    "mime-types": "^2.1.35",
     "nano-staged": "0.8.0",
     "pinia": "^2.0.16",
     "playwright": "1.23.2",
