--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@fontsource/noto-sans-sc": "4.5.10",
     "@fontsource/noto-serif-sc": "4.5.10",
     "@material-design-icons/svg": "0.11.6",
-    "@squoosh/lib": "0.4.0",
     "@types/node": "18.0.5",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.7",
@@ -52,7 +51,6 @@
     "eslint": "8.20.0",
     "eslint-plugin-vue": "9.2.0",
     "happy-dom": "6.0.4",
-    "mime-types": "2.1.35",
     "nano-staged": "0.8.0",
     "pinia": "2.0.16",
     "playwright": "1.23.4",
@@ -73,6 +71,8 @@
   },
   "dependencies": {
     "electron-updater": "5.0.5",
-    "vue": "3.2.37"
+    "vue": "3.2.37",
+    "mime-types": "2.1.35",
+    "@squoosh/lib": "0.4.0"
   }
 }
