--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "electron-devtools-installer": "3.2.0",
     "eslint": "8.20.0",
     "eslint-plugin-vue": "9.2.0",
+    "fabric": "^5.2.1",
     "happy-dom": "6.0.4",
     "nano-staged": "0.8.0",
     "pinia": "2.0.16",
@@ -70,9 +71,9 @@
     "windicss": "3.5.6"
   },
   "dependencies": {
+    "@squoosh/lib": "0.4.0",
     "electron-updater": "5.0.5",
-    "vue": "3.2.37",
     "mime-types": "2.1.35",
-    "@squoosh/lib": "0.4.0"
+    "vue": "3.2.37"
   }
 }
