--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fontsource/noto-sans-sc": "4.5.10",
     "@fontsource/noto-serif-sc": "4.5.10",
     "@material-design-icons/svg": "0.11.7",
+    "@types/fabric": "^4.5.11",
     "@types/node": "18.0.5",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.30.7",
