--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-vue": "3.0.3",
     "@vue/test-utils": "2.0.2",
     "@vueuse/core": "9.1.1",
+    "browser-fs-access": "^0.33.0",
     "cross-env": "7.0.3",
     "dexie": "3.2.2",
     "electron": "20.1.0",
@@ -71,6 +72,7 @@
   },
   "dependencies": {
     "@squoosh/lib": "0.4.0",
+    "ajv": "^8.12.0",
     "electron-updater": "5.2.1",
     "mime-types": "2.1.35",
     "vue": "3.2.38"
