--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "module": "esnext",
     "target": "esnext",
     "sourceMap": false,
@@ -8,8 +10,9 @@
     "strict": true,
     "isolatedModules": true,
     "jsx": "preserve",
-
-    "types" : ["node"],
+    "types": [
+      "node"
+    ],
     "baseUrl": ".",
     "paths": {
       "#preload": [
@@ -19,7 +22,11 @@
         "./src/*"
       ]
     },
-    "lib": ["ESNext", "dom", "dom.iterable"]
+    "lib": [
+      "ESNext",
+      "dom",
+      "dom.iterable"
+    ]
   },
 
   "include": [
