--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,7 @@
     "node": true,
     "browser": false
   },
-  "extends": [
-    "eslint:recommended",
-    /** @see https://github.com/typescript-eslint/typescript-eslint/tree/master/packages/eslint-plugin#recommended-configs */
-    "plugin:@typescript-eslint/recommended"
-  ],
+  "extends": "@antfu",
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
