--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 npx --no-install electron ./scripts/update-electron-vendors.js "
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.37.0",
     "@fontsource/noto-sans-sc": "4.5.11",
     "@fontsource/noto-serif-sc": "4.5.11",
     "@material-design-icons/svg": "0.12.1",
@@ -75,6 +76,8 @@
     "ajv": "^8.12.0",
     "electron-updater": "5.2.1",
     "mime-types": "2.1.35",
-    "vue": "3.2.38"
+    "vue": "3.2.38",
+    "vxe-table": "^4.3.11",
+    "xe-utils": "^3.5.7"
   }
 }
