--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,8 @@ on:
     paths-ignore:
       - '**.md'
       - '**.spec.js'
-      - '.idea'
-      - '.gitignore'
+      - .idea
+      - .gitignore
       - '.github/**'
       - '!.github/workflows/release.yml'
 
@@ -15,11 +15,9 @@ concurrency:
   group: release-${{ github.ref }}
   cancel-in-progress: true
 
-
 defaults:
   run:
-    shell: 'bash'
-
+    shell: bash
 
 jobs:
 
@@ -55,13 +53,12 @@ jobs:
         id: version
         run: echo "::set-output name=build-version::$(node -e "try{console.log(require('./.electron-builder.config.js').extraMetadata.version)}catch(e){console.error(e);process.exit(1)}")"
 
-
       - name: Waiting on All checks
         uses: lewagon/wait-on-check-action@v0.2
         with:
           ref: ${{ github.ref }}
           repo-token: ${{ secrets.GITHUB_TOKEN }}
-          running-workflow-name: 'draft'
+          running-workflow-name: draft
 
       - name: Delete outdated drafts
         uses: hugo19941994/delete-draft-releases@v1.0.0
@@ -96,7 +93,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16 # Need for npm >=7.7
-          cache: 'yarn'
+          cache: yarn
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
@@ -128,7 +125,6 @@ jobs:
           # Sometimes the build may fail due to a connection problem with Apple, GitHub, etc. servers.
           # This option will restart the build as many attempts as possible
           max_attempts: 3
-
 
           # Code Signing params
 
