--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -7,15 +7,15 @@
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
-
-    "types" : ["node"],
-
+    "types": [
+      "node"
+    ],
     "baseUrl": ".",
     "paths": {
       "/@/*": [
         "./src/*"
       ]
-    },
+    }
   },
   "include": [
     "src/**/*.ts",
