--- a/packages/preload/tsconfig.json
+++ b/packages/preload/tsconfig.json
@@ -7,10 +7,10 @@
     "skipLibCheck": true,
     "strict": true,
     "isolatedModules": true,
-
-    "types" : ["node"],
-
-    "baseUrl": ".",
+    "types": [
+      "node"
+    ],
+    "baseUrl": "."
   },
   "include": [
     "src/**/*.ts",
