--- a/packages/renderer/tsconfig.json
+++ b/packages/renderer/tsconfig.json
@@ -34,10 +34,10 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "types/**/*.d.ts",
-    "../../types/**/*.d.ts",
+    "../../types/**/*.d.ts"
   ],
   "exclude": [
     "**/*.spec.ts",
-    "**/*.test.ts",
+    "**/*.test.ts"
   ]
 }
