--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "taxau-desktop",
-  "description": "text recognition and automation",
-  "version": "0.0.13",
+  "version": "0.0.9",
   "private": true,
-  "engines": {
-    "node": ">=v16.13",
-    "npm": ">=8.1"
-  },
+  "description": "text recognition and automation",
   "author": {
     "name": "TaXAu"
   },
   "main": "packages/main/dist/index.cjs",
+  "engines": {
+    "node": ">=v16.13",
+    "npm": ">=8.1"
+  },
   "scripts": {
     "build": "yarn build:main && yarn build:preload && yarn build:renderer",
     "build:main": "cd ./packages/main && vite build",
@@ -30,18 +30,29 @@
     "typecheck": "yarn typecheck:main && yarn typecheck:preload && yarn typecheck:renderer",
     "postinstall": "cross-env ELECTRON_RUN_AS_NODE=1 npx --no-install electron ./scripts/update-electron-vendors.js "
   },
+  "dependencies": {
+    "@squoosh/lib": "0.4.0",
+    "ajv": "^8.12.0",
+    "electron-updater": "5.2.1",
+    "mime-types": "2.1.35",
+    "vue": "3.2.38",
+    "vxe-table": "^4.3.11",
+    "xe-utils": "^3.5.7"
+  },
   "devDependencies": {
-    "@fontsource/noto-sans-sc": "4.5.12",
-    "@fontsource/noto-serif-sc": "4.5.12",
-    "@material-design-icons/svg": "0.13.0",
+    "@antfu/eslint-config": "^0.37.0",
+    "@fontsource/noto-sans-sc": "4.5.11",
+    "@fontsource/noto-serif-sc": "4.5.11",
+    "@material-design-icons/svg": "0.12.1",
     "@types/fabric": "4.5.12",
     "@types/node": "18.0.5",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.40.0",
-    "@typescript-eslint/parser": "5.40.0",
-    "@vitejs/plugin-vue": "3.1.2",
-    "@vue/test-utils": "2.1.0",
-    "@vueuse/core": "9.3.0",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
+    "@vitejs/plugin-vue": "3.0.3",
+    "@vue/test-utils": "2.0.2",
+    "@vueuse/core": "9.1.1",
+    "browser-fs-access": "^0.33.0",
     "cross-env": "7.0.3",
     "dexie": "3.2.2",
     "electron": "21.1.0",
@@ -68,11 +79,5 @@
     "vue-router": "4.1.5",
     "vue-tsc": "0.40.13",
     "windicss": "3.5.6"
-  },
-  "dependencies": {
-    "@squoosh/lib": "0.4.0",
-    "electron-updater": "5.3.0",
-    "mime-types": "2.1.35",
-    "vue": "3.2.40"
   }
 }
